tests/NormalTests/paczka1/small_fuzzy/26769168.err
Error in line 2: A266 S561 83,3
Error in line 3: A266 A460 59,4
Error in line 8: Wj6nUgiMen A266 71,4
